--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #000000;
 }
 
 .terminal {
+  overflow-y: auto;
+  overflow-x:hidden;
+  overflow-wrap: break-word;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000;
   color: #ffffff;
-  box-shadow: 0px 0px 5px #ffffff;
   font-family: monospace;
   font-size: 16px;
-  overflow: hidden;
   grid-column-start: 1;
   grid-column-end: 3;
 }
