--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
+* {
+  font-family: monospace;
+}
+
 body {
   margin: 0;
   padding: 0;
   background-color: #000000;
-  color: #ffffff;
   font-family: monospace;
+  color: #ffffff;
   height: 100vh;
 }
 
